--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^9.3.3",
     "react": "^16.13.0",
     "react-awesome-button": "^6.5.1",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-github-corner": "^2.3.0"
   },
   "devDependencies": {
     "@zeit/next-css": "^1.0.1"
