--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "next": "^9.3.3",
+    "next-seo": "^4.7.3",
     "react": "^16.13.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-awesome-button": "^6.5.1",
