--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-awesome-button": "^6.5.1",
     "react-dom": "^16.13.0",
     "react-github-corner": "^2.3.0",
+    "react-hook-form": "^6.2.0",
     "reactstrap": "^8.5.1"
   },
   "devDependencies": {
