--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^4.5.0",
     "next": "^12.1.0",
     "next-seo": "^4.7.3",
+    "node-fetch": "^3.3.2",
     "react": "^17.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-awesome-button": "^6.5.1",
